--- a/Evenement-ms/src/main/resources/application.properties
+++ b/Evenement-ms/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=Prediction
+spring.application.name=Evenement
 spring.config.import=configserver:http://localhost:8888
 spring.cloud.config.fail-fast=true
