--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
