--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.17.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
